CSS fix for scrollbar issues on peopleTable

--- a/app/components/peopletable/peopletable.less
+++ b/app/components/peopletable/peopletable.less
@@ -193,6 +193,7 @@
       color: @brand-coral;
       position: relative;
       top: -20px;
+      right: 5px;
 
       &:hover {
         color: @brand-orange;
@@ -229,6 +230,10 @@
   border: none;
 }
 
+.public_fixedDataTable_main {
+  overflow: visible;
+}
+
 .public_fixedDataTable_bottomShadow,
 .public_fixedDataTable_topShadow,
 .public_fixedDataTable_header .public_fixedDataTableCell_main {
@@ -247,4 +252,9 @@
   &:active {
     color: @blue-green-light;
   }
+}
+
+.ScrollbarLayout_mainVertical {
+  right: -15px;
+  overflow: visible;
 }
