--- a/app/pages/patients/patients.less
+++ b/app/pages/patients/patients.less
@@ -65,6 +65,14 @@
   @media (min-width: @screen-lg-min) {
     width: 880px;
   }
+
+  .ModalOverlay-target {
+    z-index: 101;
+  }
+
+  .ModalOverlay-dialog {
+    z-index: 102;
+  }
 }
 
 .patients-new-account {
